# sh-aid

./: .gitignore  Cargo.toml  README.md  shaid-js.ts
.github/workflows/: pipeline.yml
_docs/: agents.md
_docs/wip/: architecture-design.md  implementation-roadmap.md  rig-integration-plan.md  testing-strategy.md
src/: config.rs  context.rs  error.rs  lib.rs  main.rs
src/providers/: claude.rs  gemini.rs  mod.rs  openai.rs
