[package]
name = "sh-aid"
version = "0.1.0"
edition = "2024"
description = "AI-powered shell command generator"
authors = ["Marco De Nittis"]
license = "MIT"
repository = "https://github.com/mdnmdn/sh-aid"
keywords = ["cli", "ai", "shell", "commands"]
categories = ["command-line-utilities"]

[dependencies]
# Rig framework for LLM connectivity
rig-core = "0.17.1"

# Async runtime (compatible with Rig)
tokio = { version = "1.40", features = ["full"] }

# JSON serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# CLI argument parsing
clap = { version = "4.5", features = ["derive"] }

# Cross-platform directories
dirs = "5.0"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# System information
sysinfo = "0.32"

# Async trait support
async-trait = "0.1"

[dev-dependencies]
# Testing utilities
tokio-test = "0.4"
mockito = "1.6"
tempfile = "3.13"
